# ousia-atscale

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MARKET.md  README.md  install.sh
fixtures/: finance_model.json  sales_model.json
src/: annotate.rs  diff.rs  error.rs  lib.rs  main.rs  mapper.rs  mcp.rs  model.rs  rdf.rs  report.rs  validate.rs
tests/: ground_tests.rs  mcp_tests.rs  validate_tests.rs
