[package]
name = "ousia-atscale"
version = "0.4.0"
edition = "2021"
rust-version = "1.85"
description = "BFO grounding bridge for AtScale semantic layer"
license = "MIT"
repository = "https://github.com/j0yen/ousia-atscale"

[[bin]]
name = "ousia-atscale"
path = "src/main.rs"

[lib]
name = "ousia_atscale"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
sigpipe = "0.1"
oxrdf = "0.2"
oxttl = "0.1"

tempfile = "3"

[dev-dependencies]
serde_json = "1"
tempfile = "3"
